--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 
 <h1>Websocket test page </h1>
 <p>The test page paragraph.</p>
-<script src="index-script.js"></script>
+<script src="scripts/index.js"></script>
 
 </body>
 </html> 
