Lobby table, lobby js script, display real waiting list (not mock) with links to gameroom

--- a/static/lobby.html
+++ b/static/lobby.html
@@ -16,18 +16,19 @@
         <table>
             <thead>
                 <tr>
-                    <th>Player</th>
+                    <th>Player Name</th>
                     <th>Rating</th>
                     <th>Game Type</th>
-                    <th>Mode</th>
+                    <th>Game Mode</th>
                 </tr>
             </thead>
             <tbody>
                 <!-- Table data will be populated here by JavaScript -->
             </tbody>
         </table>
+
     </div>
-    
+
     <script src="scripts/lobby.js"></script>
 </body>
 </html>
