Implement /api/joingame/:gameUrl endpoint

--- a/static/game.html
+++ b/static/game.html
@@ -2,8 +2,10 @@
 <html>
 <body>
 
-<h1>Game test page </h1>
-<p>GAME MOCK paragraph</p>
+  <h1>Game test page </h1>
+  <p>GAME MOCK paragraph</p>
+
+  <script src="../scripts/game.js"></script>
 
 </body>
 </html> 
